# internal/handler/ab-microservice/custom-params/custom-param.go
@@ -8,6 +8,8 @@ import (
 
 type abService interface {
 	CreateCustomParam(ctx context.Context, request *abDto.CreateCustomParamRequest) (*dto.CommonResponse, error)
+	GetCustomParamByID(ctx context.Context, id int64) (*abDto.GetCustomParamByIDResponse, error)
+	GetCustomParams(ctx context.Context) (*abDto.GetCustomParamsResponse, error)
 }
 
 type Handler struct {
